# rust-dev

./: README.md
calc_area/: Cargo.toml
calc_area/src/: main.rs
data_process/: Cargo.toml
data_process/data/: example.db  example.db-shm  example.db-wal  nginx_logs.csv  schema.yaml
data_process/example/: log.rs  user.rs
guessing_game/src/: main.rs
httpie/: Cargo.toml
httpie/src/: main.rs
kv/: Cargo.toml  abi.proto  build.rs
kv/benches/: pubsub.rs
kv/example/: client.rs  dummy_server.rs  gen_cert.rs  server.rs  server_with_codec.rs  server_with_sled.rs
kv/fixtures/: ca.cert  ca.key  client.cert  client.conf  client.key  server.cert  server.conf  server.key
kv/src/: client.rs  lib.rs  server.rs
kv/src/network/: frame.rs  mod.rs  multiplex.rs  stream.rs  tls.rs
kv/src/pb/: abi.rs  mod.rs
kv/src/service/: command_service.rs  mod.rs  topic.rs
kv/src/storage/: memory.rs  mod.rs  sleddb.rs
kv/tests/: server.rs
kv/tools/: gen_config.rs
kvserver/: Cargo.toml  readme.md
kvserver/src/: build.rs  main.rs
mpsc_channel/: Cargo.toml  readme.md
mpsc_channel/src/: channel.rs
p2pchat/: Cargo.toml
queryer/: Cargo.toml
queryer/examples/: dialect.rs
rgrep/: Cargo.toml  example.txt
rgrep/src/: error.rs  lib.rs  main.rs
scrape_url/: Cargo.toml
scrape_url/src/: fib.rs  main.rs
thumbor/: Cargo.toml
thumbor/src/: main.rs
