[package]
name = "p2pchat"
version = "0.1.0"
edition = "2021"


[[example]]
name = "p2p_chat"
crate-type = ["bin"]
path = "example/p2p_chat.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



[dev-dependencies]
anyhow = "1"
bytes = "1"
futures = "0.3"
libp2p = { version = "0.39",  features = ["tcp-tokio"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }